# panda_simulator

./: CMakeLists.txt  LICENSE  README.md  controller_plugins.xml  package.xml
config/: panda_control.yaml
launch/: box.launch  simulation.launch
models/: box.xacro
scripts/: docker-setup.sh
src/: .robot_control_node.cpp.kate-swp  box_publisher.cpp  joint_position_controller.cpp  robot_control_node.cpp  robot_state_initializer.cpp
